--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src = "./scripts/app.js"></script>
+    <script defer src="./scripts/app.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"/
-    <title></title>
+    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"/>
+    <title>LAB1</title>
 </head>
-<body>
+<body class="backGround">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Shah Bano - Lab 1</a>
@@ -22,21 +23,23 @@
               <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./product.html">Products</a>
+              <a class="nav-link" href="./product.html" id="products-link">Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">About Us</a>
+              <a class="nav-link" href="./about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact Us</a>
+              <a class="nav-link" href="./contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
 
-      <p></p>
+    <!-- Assigning an id to use in app.js -->
+    <div id="home-page-text"></div>
+
 </body>
 </html>
