--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="./about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
+              <a class="nav-link" href="./contactYEA.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -40,6 +40,6 @@
 
     <!-- Assigning an id to use in app.js -->
     <div id="home-page-text"></div>
-
+<!-- TESTING TESTING -->
 </body>
 </html>
