Adding register and login to the navbar for all pages

--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"/>
-    <title>LAB1</title>
+    <title>Register</title>
 </head>
 <body class="backGround">
     
@@ -35,22 +35,14 @@
               <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./login.html">Log In</a>
+                <a class="nav-link" href="./login.html">Log In</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./register.html">Register</a>
+                <a class="nav-link" href="./register.html">Register</a>
             </li>
           </ul>
         </div>
       </nav>
 
-      <!-- Making divs with ids and classes to inject data later using app.js -->
-    <div class="about-us-section">
-
-
-        <div class="about-content" id="about-content">
-
-        </div>
-    </div>
 </body>
 </html>
