--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             <li class="nav-item">
               <a class="nav-link" href="./contactYEA.html">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./login.html">Log In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./register.html">Register</a>
+            </li>
           </ul>
         </div>
       </nav>
