--- a/login.html
+++ b/login.html
@@ -35,14 +35,40 @@
               <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./login.html">Log In</a>
+                <a class="nav-link" href="./login.html" id="login-link">Log In</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./register.html">Register</a>
+                <a class="nav-link" href="./register.html" id="register-link">Register</a>
             </li>
           </ul>
         </div>
       </nav>
 
+      <!-- <div class="container mt-4">
+        <form id="loginForm">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" class="form-control" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Log In</button>
+        </form>
+      </div> -->
+      <div class="login-form">
+        <form>
+          <div class="form-group">
+            <label for="inputUsername">Username</label>
+            <input type="text" class="form-control" id="inputUsername" placeholder="Enter Username">
+          </div>
+          <div class="form-group">
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-primary" id="loginBtn">Log In</button>
+        </form>
+    </div>
 </body>
 </html>
