--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"/>
-    <title>LAB1</title>
+    <title>Products</title>
 </head>
 <body class="backGround">
     
@@ -35,10 +35,10 @@
               <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./login.html">Log In</a>
+              <a class="nav-link" href="./login.html" id="login-link">Log In</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./register.html">Register</a>
+              <a class="nav-link" href="./register.html" id="register-link">Register</a>
             </li>
           </ul>
         </div>
