--- a/register.html
+++ b/register.html
@@ -35,14 +35,45 @@
               <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./login.html">Log In</a>
+                <a class="nav-link" href="./login.html" id="login-link">Log In</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./register.html">Register</a>
+                <a class="nav-link" href="./register.html" id="register-link">Register</a>
             </li>
           </ul>
         </div>
       </nav>
 
+      <div class="register-form">
+        <form>
+          <div class="form-group">
+            <label for="inputFirstName">First Name</label>
+            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
+          </div>
+
+          <div class="form-group">
+            <label for="inputLastName">Last Name</label>
+            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+          </div>
+
+          <div class="form-group">
+            <label for="inputEmail">Email</label>
+            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+          </div>
+
+          <div class="form-group">
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control" id="inputPasswordR" placeholder="Password">
+          </div>
+          <div class="form-group">
+            <label for="inputConfirmPassword">Confirm Password</label>
+            <input type="password" class="form-control" id="inputConfirmPassword" placeholder="Confirm Password">
+          </div>
+          <button type="submit" class="btn btn-primary" id="RegisterBtn">Register</button>
+        </form>
+    </div>
+
+    <div id="ErrorMessage" class="alert alert-danger" role="alert" style="display: none;">
+    </div>
 </body>
 </html>
