--- a/blog.html
+++ b/blog.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="./scripts/blog.js"></script>
     <script defer src="./scripts/app.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"/>
-    <title>Register</title>
+    <title>Blog</title>
 </head>
 <body class="backGround">
     
@@ -41,42 +42,15 @@
                 <a class="nav-link" href="./register.html" id="register-link">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./blog.html" id="blog-link">Blog</a>
-          </li>
+                <a class="nav-link" href="./blog.html" id="blog-link">Blog</a>
+            </li>
           </ul>
         </div>
       </nav>
 
-      <div class="register-form">
-        <form>
-          <div class="form-group">
-            <label for="inputFirstName">First Name</label>
-            <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
-          </div>
-
-          <div class="form-group">
-            <label for="inputLastName">Last Name</label>
-            <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
-          </div>
-
-          <div class="form-group">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-          </div>
-
-          <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPasswordR" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <label for="inputConfirmPassword">Confirm Password</label>
-            <input type="password" class="form-control" id="inputConfirmPassword" placeholder="Confirm Password">
-          </div>
-          <button type="submit" class="btn btn-primary" id="RegisterBtn">Register</button>
-        </form>
-    </div>
-
-    <div id="ErrorMessage" class="alert alert-danger" role="alert" style="display: none;">
+      <div class="container">
+        <h1 class="text-center mt-5 mb-4">My Blog Page</h1>
+        <div id="blogContainer" class="row"></div>
     </div>
 </body>
 </html>
