--- a/product.html
+++ b/product.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./register.html" id="register-link">Register</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./blog.html" id="blog-link">Blog</a>
+          </li>
           </ul>
         </div>
       </nav>
